tests/errors/ty_errors/ty_errors.c
#error ty_errors:1:1 Type mismatch: 'unit' <> 'int'.
#error ty_errors:4:24 Type mismatch: 'string' <> 'int'.
#error ty_errors:10:17 Recursive type occurred while unifying '{?10}@ty_errors:10:13' to '{?12}@ty_errors:10:3 -> {?18}@ty_errors:10:17'.
